--- a/app/css/experience.css
+++ b/app/css/experience.css
@@ -1,24 +1,20 @@
+.exp-container {
+    margin-left: 250px;
+    background-color: black;
+    color: white;
+
+}
+
 .exp-header {
     text-align: center;
 }
 
-.exp-container {
-    position: relative;
-}
-
-.line {
-    height: 600px;
-    width: 10px;
-    position: absolute;
-    top: 100px;
-    left: 10px;
-    border: 1px solid black;
-    background-color: black;
-
-}
 
 .wrapper {
-    margin-left: 70px;
-    margin-top: 70px;
+    margin: 40px;
+}
 
+.expo-description {
+    margin-top: 50px;
+    padding-right: 100px;
 }
