--- a/app/css/project.css
+++ b/app/css/project.css
@@ -1,7 +1,16 @@
+.pro-container {
+    margin-left: 250px;
+    background-color: black;
+    color: white;
+
+}
+
 .project-image {
     width: 100%;
-    height: 350px;
+    height: 280px;
 }
+
+
 
 .card-container {
     margin: 25px 100px;
