--- a/app/css/skills.css
+++ b/app/css/skills.css
@@ -1,6 +1,9 @@
 .skills-container {
-    width: 100vw;
-    margin-top: 50px;
+    padding-top: 50px;
+    margin-left: 250px;
+    background-color: black;
+    color: white;
+    height: 100vh;
 }
 
 .skills-img-container img {
@@ -12,7 +15,7 @@
     display: flex;
     flex-direction: row;
     gap: 50px;
-    margin: 100px 400px;
+    margin: 100px 200px;
     padding: 50px;
     flex-wrap: wrap;
 }
@@ -31,7 +34,7 @@
         display: flex;
         flex-direction: row;
         gap: 15px;
-        margin: 50px 250px;
+        margin: 50px 200px;
         padding: 25px;
         flex-wrap: wrap;
     }
