--- a/app/css/project.css
+++ b/app/css/project.css
@@ -36,6 +36,16 @@
     }
 }
 
+@media only screen and (max-width:600px) {
+
+    .pro-container {
+        margin-left: 0px;
+        width: 100vw !important;
+
+
+    }
+}
+
 @media only screen and (max-width:460px) {
 
     .project-image {
